# e8-standard-model

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
crates/e8-cli/: Cargo.toml
crates/e8-cli/src/: main.rs
crates/e8-core/: Cargo.toml
crates/e8-core/src/: lib.rs  override_context.rs  prelude.rs  theory.rs
crates/e8-core/src/algebra/: embedding.rs  groups.rs  mod.rs
crates/e8-core/src/coupling/: alpha.rs  alpha_s.rs  mod.rs  weinberg.rs
crates/e8-core/src/higgs/: mass.rs  mod.rs  quartic.rs  theta_qcd.rs
crates/e8-core/src/lattice/: d4_coset.rs  mod.rs  plaquettes.rs  roots.rs
crates/e8-core/src/mass/: constants.rs  formula.rs  koide.rs  mod.rs  sectors.rs
crates/e8-core/src/mixing/: ckm.rs  cp_phase.rs  mod.rs  pmns.rs
crates/e8-core/src/octonion/: associator.rs  generation.rs  mod.rs  multiply.rs
crates/e8-core/src/precision/: mod.rs  scalar.rs  scalar_mpfr.rs
crates/e8-core/src/scorecard/: mod.rs  pdg.rs  prediction.rs  table.rs
crates/e8-core/src/special/: cf.rs  divisor.rs  mod.rs
crates/e8-core/tests/: f64_accuracy.rs  regression.rs
crates/e8-python/: Cargo.toml  pyproject.toml
crates/e8-python/src/: lib.rs
docs/plans/: 2026-02-22-sdk-refactoring-design.rs
paper/: e8_standard_model.tex
