[package]
name = "e8-cli"
version = "1.0.0"
edition = "2024"
description = "CLI for E8 Standard Model computations"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/seth-schultz/e8-standard-model"
rust-version = "1.85"

[[bin]]
name = "e8-standard-model"
path = "src/main.rs"

[dependencies]
e8-core = { path = "../e8-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
